[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/actors/objects/bob_omb/regular_frames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://scenes/actors/objects/bob_omb/bob_omb.gd" type="Script" id=2]
[ext_resource path="res://scenes/actors/objects/bob_omb/fuse1.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/actors/objects/bob_omb/fuse_frames.tres" type="SpriteFrames" id=4]
[ext_resource path="res://scenes/actors/objects/bob_omb/fuse2.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/actors/objects/bob_omb/explosion.png" type="Texture" id=6]
[ext_resource path="res://scenes/actors/objects/bob_omb/explosion_sound.wav" type="AudioStream" id=7]

[sub_resource type="RayShape2D" id=1]
length = 9.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 3 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 208.896, 69.015 )

[sub_resource type="CanvasItemMaterial" id=4]
particles_animation = true
particles_anim_h_frames = 9
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
anim_speed = 2.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 24, 24 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 12 )

[node name="BobOmb" type="Node2D"]
z_index = -2
script = ExtResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 0, -4 )
collision_layer = 5
collision_mask = 4

[node name="Sprites" type="Node2D" parent="KinematicBody2D"]

[node name="Sprite" type="AnimatedSprite" parent="KinematicBody2D/Sprites"]
frames = ExtResource( 1 )
frame = 7
playing = true

[node name="Fuse" type="AnimatedSprite" parent="KinematicBody2D/Sprites"]
visible = false
frames = ExtResource( 4 )
frame = 7
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -4.5, 2 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 4.5, 2 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[node name="FuseSound" type="AudioStreamPlayer" parent="KinematicBody2D"]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="FuseSound2" type="AudioStreamPlayer" parent="KinematicBody2D"]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="ExplosionSound" type="AudioStreamPlayer" parent="KinematicBody2D"]
stream = ExtResource( 7 )
volume_db = -5.0

[node name="PlayerDetector" type="Area2D" parent="KinematicBody2D"]
visible = false
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/PlayerDetector"]
shape = SubResource( 3 )

[node name="Particles2D" type="Particles2D" parent="KinematicBody2D"]
material = SubResource( 4 )
emitting = false
amount = 1
one_shot = true
process_material = SubResource( 5 )
texture = ExtResource( 6 )

[node name="DamageArea" type="Area2D" parent="KinematicBody2D"]
visible = false
collision_layer = 6
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/DamageArea"]
shape = SubResource( 6 )

[node name="AttackArea" type="Area2D" parent="KinematicBody2D"]
collision_layer = 6
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/AttackArea"]
position = Vector2( 0, 4 )
shape = SubResource( 7 )

[node name="RayCast2D" type="RayCast2D" parent="KinematicBody2D"]
enabled = true
cast_to = Vector2( 0, 12 )
